feat: Implement comprehensive services, products, courses, and pricing features with new collections, blocks, and frontend pages.

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,20 @@ CRON_SECRET=YOUR_CRON_SECRET_HERE
 
 # Used to validate preview requests
 PREVIEW_SECRET=YOUR_SECRET_HERE
+
+# Email Configuration (Resend)
+EMAIL_FROM=noreply@yourdomain.com
+RESEND_API_KEY=re_xxxxxxxxxxxxx
+NOTIFICATION_EMAIL=admin@yourdomain.com
+
+# Stripe Payment Processing
+STRIPE_SECRET_KEY=sk_test_xxxxxxxxxxxxx
+STRIPE_PUBLISHABLE_KEY=pk_test_xxxxxxxxxxxxx
+STRIPE_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxx
+
+# CRM Integration (HubSpot)
+HUBSPOT_API_KEY=pat-na1-xxxxxxxxxxxxx
+CRM_ENABLED=false
+
+# Analytics (Google Analytics)
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
