--- a/package.json
+++ b/package.json
@@ -53,7 +53,11 @@
     "sharp": "0.34.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "@payloadcms/db-postgres": "3.69.0"
+    "@payloadcms/db-postgres": "3.69.0",
+    "stripe": "^14.0.0",
+    "@stripe/stripe-js": "^2.0.0",
+    "resend": "^3.0.0",
+    "@hubspot/api-client": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
